--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
     <script src="/js/utils.js?v=1.3"></script>
     <script src="/js/animations.js?v=1.3"></script>
     <script src="/js/markdown-parser.js?v=1.3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="/js/portfolio.js?v=1.3"></script>
     <script src="/js/ai-chat.js?v=1.3"></script>
     <script src="/js/app.js?v=1.3"></script>
