--- a/index.html
+++ b/index.html
@@ -108,15 +108,11 @@
             <div class="logo">Portfolio</div>
             <ul class="nav-links">
                 <li><a href="#" data-section="home" aria-label="Go to home section">Home</a></li>
-                <li><a href="#" data-section="portfolio" aria-label="Go to portfolio section">Work</a></li>
                 <li><a href="#" data-section="about" aria-label="Go to about section">About</a></li>
-                <li><a href="/resume.html" aria-label="View resume">Resume</a></li>
                 <li><a href="#" data-section="contact" aria-label="Go to contact section">Contact</a></li>
-                <li><a href="/asteroids.html" aria-label="Play Asteroids game">🎮 Asteroids</a></li>
             </ul>
             <div style="display: flex; align-items: center; gap: 1rem;">
                 <a href="/admin.html" class="btn btn-secondary" style="font-size: 0.875rem; padding: 0.5rem 1rem;">Admin</a>
-                <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle dark/light theme">🌓</button>
             </div>
         </nav>
     </header>
@@ -140,21 +136,7 @@
                         </a>
                     </div>
                 </div>
-                <!-- Shooting Stars -->
-                <div class="shooting-star-1"></div>
-                <div class="shooting-star-2"></div>
-                <div class="shooting-star-3"></div>
-                <div class="shooting-star-4"></div>
-            </div>
-        </section>
-
-        <!-- Work Section (Accordion) -->
-        <section id="portfolio" class="accordion-section">
-            <div class="accordion-header" data-section="portfolio">
-                <h2>Work</h2>
-                <span class="accordion-icon">▶</span>
-            </div>
-            <div class="accordion-content">
+                <!-- Project Types moved directly under the button -->
                 <div class="portfolio">
                     <div class="container">
                         <div id="portfolio-container">
@@ -164,6 +146,30 @@
                                 <div class="skeleton-card"></div>
                                 <div class="skeleton-card"></div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Shooting Stars -->
+                <div class="shooting-star-1"></div>
+                <div class="shooting-star-2"></div>
+                <div class="shooting-star-3"></div>
+                <div class="shooting-star-4"></div>
+            </div>
+        </section>
+
+        <!-- Work Section (Accordion) - Now simplified -->
+        <section id="portfolio" class="accordion-section">
+            <div class="accordion-header" data-section="portfolio">
+                <h2>Work</h2>
+                <span class="accordion-icon">▶</span>
+            </div>
+            <div class="accordion-content">
+                <div class="portfolio">
+                    <div class="container">
+                        <div class="work-placeholder">
+                            <h2>Work Section</h2>
+                            <p>This section is now integrated into the Home section above. Click on any project type card to explore specific work categories.</p>
+                            <a href="#home" class="btn btn-primary">Back to Home</a>
                         </div>
                     </div>
                 </div>
